--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: Setup SSH key from base64 secret
         run: |
-          echo "${{ secrets.AWS_SSH_KEY_B64 }}" | base64 --decode tr -d '\n' > awskey.pem
+          echo "${{ secrets.AWSKEY }}" | base64 --decode tr -d '\n' > awskey.pem
           chmod 600 awskey.pem
           cat awskey.pem
 
