--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,11 @@ main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
+[build]
+command = "npm run build:client"
+cwd = "."
+watch_dir = ["src", "client"]
+
 [env.production]
 name = "iknowmyip"
 
@@ -15,5 +20,5 @@ ENVIRONMENT = "production"
 
 # Static assets
 [assets]
-directory = "dist/static"
+directory = "dist"
 binding = "ASSETS"
