--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
-    "build:worker": "vite build --outDir=dist/static && wrangler deploy --dry-run",
-    "deploy": "wrangler deploy",
+    "build:worker": "vite build && wrangler deploy --dry-run",
+    "deploy": "vite build && wrangler deploy",
     "dev:worker": "wrangler dev",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -52,7 +52,6 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
-    "dns": "^0.2.2",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -62,7 +61,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
-    "net": "^1.0.2",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -105,7 +103,7 @@
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.14",
-    "wrangler": "^3.99.0"
+    "wrangler": "^4.24.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
