--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
-    "build:worker": "vite build && wrangler deploy --dry-run",
-    "deploy": "vite build && wrangler deploy",
+    "build:worker": "vite build --outDir=dist/static && wrangler deploy --dry-run",
+    "deploy": "wrangler deploy",
     "dev:worker": "wrangler dev",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
