--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,9 @@ main = "src/worker.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
+[build]
+command = "npm run build"
+
 [env.production]
 name = "iknowmyip"
 
