--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs18.x"
+  "builds": [
+    {
+      "src": "api/index.ts",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
-      "dest": "/api"
+      "dest": "/api/index.ts"
     }
   ]
 }
