--- a/vercel.json
+++ b/vercel.json
@@ -23,11 +23,17 @@
       "dest": "/api/dns.ts"
     },
     {
-      "src": "/",
-      "dest": "/api/index.ts"
+      "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "handle": "filesystem"
+    },
+    {
+      "src": "/",
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
