Fix routing priority for cURL detection

--- a/vercel.json
+++ b/vercel.json
@@ -39,5 +39,21 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "functions": {
+    "api/index.ts": {
+      "memory": 128
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
   ]
 }
